--- a/views/index.mustache
+++ b/views/index.mustache
@@ -6,12 +6,25 @@
   </head>
   <body>
     <h1>Welcome to the hangman game!</h1>
+    <form class="" action="/newGame" method="post">
+      <button type="submit" name="button">New Game</button>
+      <!-- <input type="radio" name="easy" value="easy">
+      <label for="easy">Easy</label>
+      <input type="radio" name="normal" value="normal">
+      <label for="normal">Normal</label>
+      <input type="radio" name="hard" value="hard">
+      <label for="hard">Hard</label> -->
+    </form>
     <h2>Type your guesses here:</h2>
+    <span>{{tryAgain}}</span>
+    <span>{{errorMsg}}</span>
     <form class="" action="/guess" method="post">
-      <input placeholder="Your guess" type="text" name="guess" value="">
+      <input autofocus="autofocus" placeholder="Your guess" type="text" name="guess" value="">
       <input type="submit" name="submit" value="Enter">
     </form>
     <span>You have {{chances}} chances remaining</span>
+    <h1>{{gameOverMsgLose}}</h1>
+    <h1>{{gameOverMsgWin}}</h1>
     <h1>{{#check}}{{.}}{{/check}}</h1>
     <h1>You have already guessed these letters:</h1>
     <h2>{{guessed}}</h2>
