--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Bubbler+One');
 * {
   box-sizing: border-box;
   margin: auto 0;
@@ -21,6 +22,7 @@ body {
 .solution {
   padding-top: 5vw;
   padding-bottom: 5vw;
+  font-family: 'Bubbler One', sans-serif;
 }
 
 .guess {
